commented out the some properties in the .card__text class

--- a/animals.html
+++ b/animals.html
@@ -65,9 +65,9 @@
 
         .card__text {
           flex: 1 1 auto;
-          font-size: 0.95rem;
-          line-height: 2;
-          margin-bottom: 1.25rem;
+<!--          font-size: 0.95rem;-->
+<!--          line-height: 2;-->
+<!--          margin-bottom: 1.25rem;-->
         }
         </style>
     </head>
@@ -75,130 +75,98 @@
         <h1>My Animal Repository</h1>
         <ul class="cards">
             <li class="cards__item">
-<div class = 'card__title' >American Foxhound</div>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-<p class = 'card__text'><strong>Location:</strong> North-America</p>
-<p class = 'card__text'><strong>Type:</strong> Hound</p>
-</li>
-
-<li class="cards__item">
-<div class = 'card__title' >Arctic Fox</div>
-<p class = 'card__text'><strong>Diet:</strong> Carnivore</p>
-<p class = 'card__text'><strong>Location:</strong> Eurasia</p>
-<p class = 'card__text'><strong>Type:</strong> Mammal</p>
-</li>
-
-<li class="cards__item">
-<div class = 'card__title' >Cross Fox</div>
-<p class = 'card__text'><strong>Diet:</strong> Carnivore</p>
-<p class = 'card__text'><strong>Location:</strong> North-America</p>
-<p class = 'card__text'><strong>Type:</strong> mammal</p>
-</li>
-
-<li class="cards__item">
-<div class = 'card__title' >Darwin’s fox</div>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-<p class = 'card__text'><strong>Location:</strong> South-America</p>
-<p class = 'card__text'><strong>Type:</strong> Mammal</p>
-</li>
-
-<li class="cards__item">
-<div class = 'card__title' >English Foxhound</div>
+<div class = 'card__title' >Alpine Goat</div>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
 <p class = 'card__text'><strong>Location:</strong> Europe</p>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-</li>
-
-<li class="cards__item">
-<div class = 'card__title' >Fennec Fox</div>
-<p class = 'card__text'><strong>Location:</strong> Africa</p>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-</li>
-
-<li class="cards__item">
-<div class = 'card__title' >Fox</div>
-<p class = 'card__text'><strong>Diet:</strong> Carnivore</p>
-<p class = 'card__text'><strong>Location:</strong> Africa</p>
 <p class = 'card__text'><strong>Type:</strong> Mammal</p>
 </li>
 
 <li class="cards__item">
-<div class = 'card__title' >Fox Snakes</div>
+<div class = 'card__title' >American Pygmy Goat</div>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
 <p class = 'card__text'><strong>Location:</strong> North-America</p>
-<p class = 'card__text'><strong>Diet:</strong> Carnivore</p>
+<p class = 'card__text'><strong>Type:</strong> Mammal</p>
 </li>
 
 <li class="cards__item">
-<div class = 'card__title' >Fox Squirrel</div>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-<p class = 'card__text'><strong>Location:</strong> Central-America</p>
-<p class = 'card__text'><strong>Type:</strong> rodent</p>
+<div class = 'card__title' >Angora Goat</div>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
+<p class = 'card__text'><strong>Location:</strong> Africa</p>
+<p class = 'card__text'><strong>Type:</strong> Mammals</p>
 </li>
 
 <li class="cards__item">
-<div class = 'card__title' >Fox Terrier</div>
-<p class = 'card__text'><strong>Location:</strong> Europe</p>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-</li>
-
-<li class="cards__item">
-<div class = 'card__title' >Golden-Crowned Flying Fox</div>
+<div class = 'card__title' >Cashmere Goat</div>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
 <p class = 'card__text'><strong>Location:</strong> Asia</p>
+<p class = 'card__text'><strong>Type:</strong> Ruminant</p>
+</li>
+
+<li class="cards__item">
+<div class = 'card__title' >Goat</div>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
+<p class = 'card__text'><strong>Location:</strong> Africa</p>
+<p class = 'card__text'><strong>Type:</strong> Mammal</p>
+</li>
+
+<li class="cards__item">
+<div class = 'card__title' >Kiko Goat</div>
+<p class = 'card__text'><strong>Location:</strong> North-America</p>
 <p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
 </li>
 
 <li class="cards__item">
-<div class = 'card__title' >Gray Fox</div>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-<p class = 'card__text'><strong>Location:</strong> Central-America</p>
+<div class = 'card__title' >Kinder Goat</div>
+<p class = 'card__text'><strong>Location:</strong> North-America</p>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
+</li>
+
+<li class="cards__item">
+<div class = 'card__title' >LaMancha Goat</div>
+<p class = 'card__text'><strong>Location:</strong> North-America</p>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
+</li>
+
+<li class="cards__item">
+<div class = 'card__title' >Nigerian Goat</div>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
+<p class = 'card__text'><strong>Location:</strong> Africa</p>
+<p class = 'card__text'><strong>Type:</strong> Caprid</p>
+</li>
+
+<li class="cards__item">
+<div class = 'card__title' >Nubian Goat</div>
+<p class = 'card__text'><strong>Location:</strong> North-America</p>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
+</li>
+
+<li class="cards__item">
+<div class = 'card__title' >Pygora Goat</div>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
+<p class = 'card__text'><strong>Location:</strong> North-America</p>
 <p class = 'card__text'><strong>Type:</strong> Mammal</p>
 </li>
 
 <li class="cards__item">
-<div class = 'card__title' >Kit Fox</div>
+<div class = 'card__title' >Saanen Goat</div>
 <p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-<p class = 'card__text'><strong>Location:</strong> Central-America</p>
+<p class = 'card__text'><strong>Location:</strong> Europe</p>
 <p class = 'card__text'><strong>Type:</strong> mammal</p>
 </li>
 
 <li class="cards__item">
-<div class = 'card__title' >Marble Fox</div>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-<p class = 'card__text'><strong>Location:</strong> North-America</p>
-<p class = 'card__text'><strong>Type:</strong> Mammal</p>
-</li>
-
-<li class="cards__item">
-<div class = 'card__title' >Red Fox</div>
+<div class = 'card__title' >Savanna Goat</div>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
 <p class = 'card__text'><strong>Location:</strong> Africa</p>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-</li>
-
-<li class="cards__item">
-<div class = 'card__title' >Smooth Fox Terrier</div>
-<p class = 'card__text'><strong>Location:</strong> Europe</p>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-</li>
-
-<li class="cards__item">
-<div class = 'card__title' >Tibetan Fox</div>
-<p class = 'card__text'><strong>Diet:</strong> Carnivore</p>
-<p class = 'card__text'><strong>Location:</strong> Asia</p>
 <p class = 'card__text'><strong>Type:</strong> Mammal</p>
 </li>
 
 <li class="cards__item">
-<div class = 'card__title' >Toy Fox Terrier</div>
-<p class = 'card__text'><strong>Location:</strong> North-America</p>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
+<div class = 'card__title' >Spanish Goat</div>
+<p class = 'card__text'><strong>Location:</strong> Central-America</p>
+<p class = 'card__text'><strong>Diet:</strong> Herbivore</p>
 </li>
 
-<li class="cards__item">
-<div class = 'card__title' >Wire Fox Terrier</div>
-<p class = 'card__text'><strong>Location:</strong> Europe</p>
-<p class = 'card__text'><strong>Diet:</strong> Omnivore</p>
-</li>
-
-<li class="cards__item">
         </ul>
     </body>
 </html>
