--- a/animals_template.html
+++ b/animals_template.html
@@ -65,9 +65,9 @@
 
         .card__text {
           flex: 1 1 auto;
-          font-size: 0.95rem;
-          line-height: 2;
-          margin-bottom: 1.25rem;
+<!--          font-size: 0.95rem;-->
+<!--          line-height: 2;-->
+<!--          margin-bottom: 1.25rem;-->
         }
         </style>
     </head>
